--- a/Automation/Automation.App/Views/TasksPages/_Components/ContextVisualizer.xaml
+++ b/Automation/Automation.App/Views/TasksPages/_Components/ContextVisualizer.xaml
@@ -1,10 +1,10 @@
 ﻿<UserControl
-    x:Class="Automation.App.Components.Data.ContextVisualizer"
+    x:Class="Automation.App.Views.TasksPages.Components.ContextVisualizer"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Automation.App.Components.Data"
+    xmlns:local="clr-namespace:Automation.App.Views.TasksPages.Components"
     mc:Ignorable="d"
     d:DesignHeight="450"
     d:DesignWidth="800">
