--- a/Automation/Automation.App/Views/TasksPages/ScopeUI/ScopeEdit.xaml
+++ b/Automation/Automation.App/Views/TasksPages/ScopeUI/ScopeEdit.xaml
@@ -1,15 +1,14 @@
 ﻿<UserControl
-    x:Class="Automation.App.Views.TasksPages.Components.ScopedParameters"
+    x:Class="Automation.App.Views.TasksPages.ScopeUI.ScopeEdit"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Automation.App.Views.TasksPages.Components"
+    xmlns:local="clr-namespace:Automation.App.Views.TasksPages.ScopeUI"
     mc:Ignorable="d"
-    xmlns:viewModels="clr-namespace:Automation.Shared.ViewModels;assembly=Automation.Shared"
     xmlns:data="clr-namespace:Automation.App.Components.Data"
     xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared">
-    <Grid Margin="4" DataContext="{Binding Scoped, RelativeSource={RelativeSource AncestorType={x:Type local:ScopedParameters}}}">
+    <Grid Margin="4" DataContext="{Binding Scope, RelativeSource={RelativeSource AncestorType={x:Type local:ScopeEdit}}}">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
@@ -18,9 +17,9 @@
         </Grid.RowDefinitions>
 
         <TextBlock Margin="0,0,0,4">Name</TextBlock>
-        <TextBox Grid.Row="1" Text="{Binding Name}" />
+        <TextBox Grid.Row="1" Text="{Binding ScopeNode.Name}" />
 
         <TextBlock Grid.Row="2" Margin="0,4,0,2">Context</TextBlock>
-        <local:ContextVisualizer Grid.Row="3" Context="{Binding Context}" />
+        <local:ContextVisualizer Grid.Row="3" Context="{Binding ScopeNode.Context}" />
     </Grid>
 </UserControl>
