--- a/Automation/Automation.App/Views/TasksPages/WorkflowUI/WorkflowEdit.xaml
+++ b/Automation/Automation.App/Views/TasksPages/WorkflowUI/WorkflowEdit.xaml
@@ -9,19 +9,14 @@
     mc:Ignorable="d"
     d:DesignHeight="450"
     d:DesignWidth="800">
-    <Grid DataContext="{Binding Workflow, RelativeSource={RelativeSource AncestorType={x:Type local:WorkflowEdit}}}">
-        <Grid.RowDefinitions>
-            <RowDefinition />
-            <RowDefinition />
-        </Grid.RowDefinitions>
-        <GroupBox Header="Scoped parameters">
-            <components:ScopedParameters Scoped="{Binding ParentScope}" />
-        </GroupBox>
+    <StackPanel Orientation="Vertical" DataContext="{Binding Workflow, RelativeSource={RelativeSource AncestorType=local:WorkflowEdit}}">
+        <TextBlock Margin="0,0,0,4">Name</TextBlock>
+        <TextBox Text="{Binding WorkflowNode.Name}" />
         <GroupBox
             Grid.Row="1"
             Margin="0,4,0,0"
             Header="Workflow">
             <TextBlock>Edit the intputs and outputs</TextBlock>
         </GroupBox>
-    </Grid>
+    </StackPanel>
 </UserControl>
