--- a/Automation/Automation.App/Views/TasksPages/_Components/ScopedHistory.xaml
+++ b/Automation/Automation.App/Views/TasksPages/_Components/ScopedHistory.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="Automation.App.Views.TasksPages.Components.ScopedInstances"
+    x:Class="Automation.App.Views.TasksPages.Components.ScopedHistory"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -11,7 +11,7 @@
     mc:Ignorable="d"
     d:DesignHeight="450"
     d:DesignWidth="800">
-    <Grid>
+    <Grid DataContext="{Binding History, RelativeSource={RelativeSource AncestorType={x:Type local:ScopedHistory}}}">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="auto" />
@@ -21,7 +21,7 @@
             CanUserAddRows="False"
             CanUserSortColumns="False"
             CanUserDeleteRows="False"
-            ItemsSource="{Binding Instances, RelativeSource={RelativeSource AncestorType={x:Type local:ScopedInstances}}}">
+            ItemsSource="{Binding Data}">
             <DataGrid.Resources>
                 <Style TargetType="TextBlock" x:Key="StatusTextBlock">
                     <Style.Triggers>
@@ -91,7 +91,8 @@
             PagingChange="InstancesPaging_PagingChange"
             Margin="0,2,0,0"
             Grid.Row="1"
-            Capacity="50"
-            Total="{Binding TotalInstances, RelativeSource={RelativeSource AncestorType={x:Type local:ScopedInstances}}}" />
+            PageNumber="{Binding Page}"
+            Capacity="{Binding PageSize}"
+            Total="{Binding Total}" />
     </Grid>
 </UserControl>
