--- a/Automation/Automation.App/Views/TasksPages/ScopeUI/ScopeEdit.xaml
+++ b/Automation/Automation.App/Views/TasksPages/ScopeUI/ScopeEdit.xaml
@@ -5,6 +5,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Automation.App.Views.TasksPages.ScopeUI"
+    xmlns:components="clr-namespace:Automation.App.Views.TasksPages.Components"
     mc:Ignorable="d"
     xmlns:data="clr-namespace:Automation.App.Components.Data"
     xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared">
@@ -17,9 +18,9 @@
         </Grid.RowDefinitions>
 
         <TextBlock Margin="0,0,0,4">Name</TextBlock>
-        <TextBox Grid.Row="1" Text="{Binding ScopeNode.Name}" />
+        <TextBox Grid.Row="1" Text="{Binding Name}" />
 
         <TextBlock Grid.Row="2" Margin="0,4,0,2">Context</TextBlock>
-        <local:ContextVisualizer Grid.Row="3" Context="{Binding ScopeNode.Context}" />
+        <components:ContextVisualizer Grid.Row="3" Context="{Binding Context}" />
     </Grid>
 </UserControl>
