--- a/Automation/Automation.App/Views/TasksPages/WorkflowUI/WorkflowEdit.xaml
+++ b/Automation/Automation.App/Views/TasksPages/WorkflowUI/WorkflowEdit.xaml
@@ -11,7 +11,7 @@
     d:DesignWidth="800">
     <StackPanel Orientation="Vertical" DataContext="{Binding Workflow, RelativeSource={RelativeSource AncestorType=local:WorkflowEdit}}">
         <TextBlock Margin="0,0,0,4">Name</TextBlock>
-        <TextBox Text="{Binding WorkflowNode.Name}" />
+        <TextBox Text="{Binding Name}" />
         <GroupBox
             Grid.Row="1"
             Margin="0,4,0,0"
